--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.6"
+    "@babel/preset-env": "^7.9.6",
+    "jest": "^26.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "NODE_ENV=production babel src --out-dir dist",
     "prepublishOnly": "npm run build"
   },
@@ -26,6 +27,7 @@
   "files": [
     "dist"
   ],
+  
   "bin": {
     "gendiff": "dist/bin/gendiff.js"
   },
