--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gendiff",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Compares two configuration files and shows a difference.",
   "main": "src/index.js",
   "dependencies": {
@@ -9,16 +9,10 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.6",
     "jest": "^26.0.1"
   },
   "scripts": {
-    "test": "jest",
-    "build": "NODE_ENV=production babel src --out-dir dist",
-    "prepublishOnly": "npm run build"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,9 +21,9 @@
   "files": [
     "dist"
   ],
-  
+  "type": "module",
   "bin": {
-    "gendiff": "dist/bin/gendiff.js"
+    "gendiff": "src/bin/gendiff.js"
   },
   "author": "Manukyan Georgii",
   "license": "ISC",
