--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Compares two configuration files and shows a difference.",
   "main": "src/index.js",
   "dependencies": {
-    "commander": "^5.0.0",
+    "commander": "^5.1.0",
     "fs": "0.0.1-security",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "eslint": "^7.0.0",
     "jest": "^26.0.1"
   },
   "scripts": {
