--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,7 +36,7 @@ jobs:
         make lint
     - name: Run tests & publish code coverage
         # Publish code coverage on Code Climate
-        # https://github.com/paambaati/codeclimate-action
+        # github.com/paambaati/codeclimate-action
         uses: paambaati/codeclimate-action@v2.4.0
         # Add Code Climate secret key
         env:
