--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "eslint": "^7.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.11.0",
     "jest": "^26.0.1"
   },
   "scripts": {
