--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "commander": "^5.1.0",
     "fs": "0.0.1-security",
+    "js-yaml": "^3.13.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
