Adding all tests

--- a/__tests__/fixtures/after.ini
+++ b/__tests__/fixtures/after.ini
@@ -1,3 +1,16 @@
- timeout = 20
- verbose = true
- host = hexlet.io
+[survivers]
+Johny = false
+Lilly = "alive"
+Simpsons = true
+The_Dog = "bark"
+[survivers.Children]
+Timmy = "was born"
+[survivers.Justice_league]
+Superman = "Invincible"
+Flash = "Fast_guy"
+[group1]
+foo = "bar"
+baz = "bars"
+rts = "str"
+[group3]
+cash = 100
