--- a/__tests__/fixtures/before.ini
+++ b/__tests__/fixtures/before.ini
@@ -1,4 +1,13 @@
- host = hexlet.io
- timeout = 50
- proxy = 123.234.53.22
- follow = false
+[survivers]
+Lilly = "alive"
+Mick = "OK"
+Simpsons = true
+[survivers.Justice_league]
+Superman = "Invincible"
+[group1]
+baz = "bas"
+foo = "bar"
+[group1.rts]
+key = "value"
+[group2]
+complexity = "high"
